# transformer

./: .gitignore  README.md  constants.py  dockerfile  main.py  pyproject.toml  requirements.txt
data/: __init__.py  data_loaders.py  dataset.py  tokenizer.py
engine/: __init__.py  engine.py  loss.py  optimiser.py  save_model.py  setup.py
model/: __init__.py  attention.py  cross_attention.py  decoder.py  decoder_layer.py  encoder.py  encoder_layer.py  feed_forward.py  input_embedding.py  self_attention.py  transformer.py
nlp_prep/: prep_data.py
scripts/: main.py
src/: constants.py
src/data/: __init__.py  data_loaders.py  dataset.py  save_tokenized_model.py  tokenizer.py
src/engine/: __init__.py  engine.py  loss.py  optimiser.py
src/model/: attention.py  cross_attention.py  decoder.py  decoder_layer.py  encoder.py  encoder_layer.py  feed_forward.py  input_embedding.py  self_attention.py  transformer.py
src/nlp_prep/: __init__.py  corpus_downloader.py  prep_data.py
