[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "Implementation of the transformer model according to the paper \"Attention is All You Need\""
authors = ["Lawrence Borst"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
torch = "^2.6.0"
sentencepiece = { version = "0.2.0", allow-prereleases = true }
requests = "^2.32.3"
tqdm = "^4.67.1"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
